--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <span class="icon">
                 <i class="fab fa-github"></i>
             </span>
-            <span>SpeechGPT-Gen</span>
+            <span>Github</span>
             </a>
         </span>
 
