--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="column has-text-centered">
 
         <span class="link-block">
-            <a href="" target="_blank"
+            <a href="https://arxiv.org/abs/2401.13527" target="_blank"
             class="external-link button is-normal is-rounded is-dark">
             <span class="icon">
                 <i class="ai ai-arxiv"></i>
