--- a/index.html
+++ b/index.html
@@ -233,38 +233,44 @@ Extensive experimental results demonstrate that SpeechGPT-Gen markedly excels in
             <th style="text-align: center">Text</th>
 			<th style="text-align: center">Speaker Prompt</th>
             <th style="text-align: center">SpeechGPT-Gen</th>
+            <th style="text-align: center">Groundtruth</th>
 
             
 			</tr>
 			</thead>
 			<tbody>
-            <td style="text-align: center;vertical-align:middle;width: 800px">the phrase and the day and the scene harmonized in a chord.</td>
+            <td style="text-align: center;vertical-align:middle;width: 800px">The strollers took their part in it with hearty zest now that they had some chance of beating off their foes.</td>
             <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/1/prompt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-			<td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/1/generated.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+			<td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/1/gen.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/1/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
             </tr>
 			
             <tr>
-            <td style="text-align: center;vertical-align:middle;width: 800px">the examination however resulted in no discovery.</td>
+            <td style="text-align: center;vertical-align:middle;width: 800px">She can scoop these things into three red bags, and we will go meet her Wednesday at the train station. .</td>
             <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/2/prompt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/2/generated.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/2/gen.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/2/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
             </tr>
 			
             <tr>
-            <td style="text-align: center;vertical-align:middle;width: 800px">consumption becomes a larger element in the standard of living in the city than in the country.</td>
+            <td style="text-align: center;vertical-align:middle;width: 800px">He claimed his insurance company contested the damages, not the restaurant.</td>
             <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/3/prompt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/3/generated.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/3/gen.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/3/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
             </tr>
 
             <tr>
-            <td style="text-align: center;vertical-align:middle;width: 800px">the army found the people in poverty and left them in comparative wealth.</td>
+            <td style="text-align: center;vertical-align:middle;width: 800px">This is a very common type of bow, one showing mainly red and yellow, with little or no green or blue.</td>
             <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/4/prompt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/4/generated.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/4/gen.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/4/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
             </tr>
 
             <tr>
-            <td style="text-align: center;vertical-align:middle;width: 800px">I want to put myself on discussion also.</td>
+            <td style="text-align: center;vertical-align:middle;width: 800px">The actual primary rainbow observed is said to be the effect of super-imposition of a number of bows.</td>
             <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/5/prompt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
-            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/5/generated.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/5/gen.wav" autoplay/>Your browser does not support the audio element.</audio></td>
+            <td style="text-align: center;vertical-align:middle;width: 800px"><audio controls="controls" style="width: 140px;"><source src="zs_tts/5/gt.wav" autoplay/>Your browser does not support the audio element.</audio></td>
             </tr>
 
             </tbody>
